# TDD_Raytracer

./: .gitignore  ArithmeticStructures.cpp  ArithmeticStructures.h  CMakeLists.txt  Canvas.cpp  Canvas.h  GeometricStructures.cpp  GeometricStructures.h  Material.cpp  Material.h  PPMWriter.cpp  PPMWriter.h  QtWidget_VtkSandbox.cpp  QtWidget_VtkSandbox.h  QtWidget_VtkSandbox.qrc  QtWidget_VtkSandbox.ui  README.md  Ray.cpp  Ray.h  SceneObject.cpp  SceneObject.h  TDD_Raytracer.cpp  TDD_Raytracer.h  TDD_Raytracer.sln  TDD_Raytracer.vcxproj  TDD_Raytracer.vcxproj.filters  X_512Y_256Z_-64.ppm  renderedImage_P6.ppm  vectorfield.ppm
